overflow-solved

--- a/src/bookings/BookingDetails.module.css
+++ b/src/bookings/BookingDetails.module.css
@@ -1,9 +1,9 @@
 .details{
     display: flex;
     flex-direction: column;
-    overflow-y: auto;
     width: 100%;
     max-width: 1100px;
+
     padding: 40px;
     gap: 20px;
 }
