--- a/src/pages/Cabin.module.css
+++ b/src/pages/Cabin.module.css
@@ -33,7 +33,7 @@
     padding: 5px;
     flex-wrap: nowrap;
     display: flex;
-    width: 265px;
+    width: 275px;
     gap: 5px;
     border-radius: 5px;
     background-color: #18212f;
