--- a/src/pages/Navbar.css
+++ b/src/pages/Navbar.css
@@ -4,7 +4,7 @@
   width: 20%;
   padding: 20px 0;
   background-color: #18212f;
-  height: 100vh;
+  height: 100%;
   position:fixed;
   z-index: 1;
 }
@@ -54,7 +54,7 @@
 .right-section {
   
   background-color:#18212f;
-  position: fixed;
+  /* position: fixed; */
   width: 100%;
 }
 .user-section {
